src/css/main.css
html, body {
    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
    position: fixed;
    width: 100vw;
    height: 100vh;
    margin: 0;
    padding: 0;
    overflow: hidden;
}








#mainContent {
    position: fixed;
    float:  right;
    right:  0;
    top:  0;

    width:  calc(100vw - 270px);
    height: 100vh;
}
    #mainContent .header {
        position: absolute;
        width:  calc(100% - 10px * 2);
        height: 30px;

        padding:  10px;
        z-index: 100;
        pointer-events: none;
    }

    #mainContent .header .titleHolder {
        position: absolute;
        top: 0;
        left: 0;
        
        width:  calc(100% - 120px);
        height: 30px;
        
        padding: 10px;
        border: none;
        background: none;

        color:  #eee;
        font-size: 20px;
        line-height: 30px;
        pointer-events: all;
    }

    #mainContent .header .packageButton {
        float:  right;
        width:  auto;
        pointer-events: all;
    }
    


    #worldCanvas {
       position: absolute;
       top: 0;
       left: 0;
       width:  100%;
       height: 100%;
    }






#sideBar {
    position: fixed;
    left:  0;
    top:  0;
    width: calc(270px);
    height: calc(100vh);


    
    background: #333;
}

#sideBar .page {
    position: absolute;
    top:  0;
    left:  0;
    width: calc(100% - 10px);
    height: calc(100vh - 10px * 2);

    padding:  10px;
    padding-right: 0;
    overflow: auto;
    transition: all .3s;
}

#sideBar .page.hide {
    pointer-events: none;
    opacity: 0;
    margin-left: -30px;
}


#sideBar .page.searchPage .inputField {
    width:  calc(100% - 10px);
    height: 20px;
    line-height: 20px;
    border: none;

    margin-bottom: 5px;
    border-bottom: 1px solid #444;

    color: #ccc;
}



#sideBar .page .button.newComponentButton {
    float:  left;
    width:  121px;
    text-align: center;
}

#sideBar .page .icon.searchIcon {
    position: relative;
    float:  right;
    right:  10px;
    height: 20px;
    padding:  5px;
    width: auto;
    opacity: .7;

    transition: opacity .3s;
}
#sideBar .page .icon.searchIcon:hover {
    opacity: 1;
}







#sideBar .header {
    height: 30px;
}
#sideBar .header .headerText {
    position: absolute;
    left:  30px;
    float: left;
    color: #ccc;
}
#sideBar .header .headerIcon {
    float:  left;
    height: 20px;
    width: auto;
    opacity: .7;
}
#sideBar .header .headerIcon.dropDownButton {
    left: 3px;
    height: 15px;
    padding: 2.5px;
    transition: all 0.2s;
}

#sideBar .header .headerIcon.dropDownButton.close {
    transform: rotateZ(-90deg);
}







#sideBar .componentHolder {
    position: relative;
    width:  100%;
    height: auto;
    max-height: calc(100vh - 50px);
    overflow-y: auto;
    overflow-x: hidden;
    transition: all 0.45s;
}

#sideBar .componentHolder.hide {
    transition: all 0.3s;
    margin
    opacity: 0;
    max-height: 0;
    pointer-events: none;
}

.componentHolder .component {
    position: relative;
    width:  100%;
    height: 50px;
    margin-bottom: 10px;
}
.componentHolder .component .titleHolder {
    position: absolute;
    float:  left;
    top:  0;
    margin-left: 10px;
    width:  calc(100% - 32px);
    height: 20px;

    padding:  5px 0;
    color: #eee;

    overflow: hidden;
    white-space: nowrap;
}
.componentHolder .component .text.subText {
    position: absolute;
    top:  25px;
    float:  left;
    margin-left: 10px;
    width:  calc(100% - 32px);

    font-size: 12px;

    overflow: hidden;
    white-space: nowrap;
}


.componentHolder .component .optionIcon {
    position: relative;
    float:  right;
    right:  0;
    top:  0;

    width: auto;
    height: 20px;
    padding:  5px 10px;
}
























.noselect {
  -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
     -khtml-user-select: none; /* Konqueror HTML */
       -moz-user-select: none; /* Firefox */
        -ms-user-select: none; /* Internet Explorer/Edge */
            user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome and Opera */
}






.inputField {
    position: relative;
    left: 0;
    padding: 7px 3px;
    height: 32px;
    border-radius: 3px;
    background: transparent;

    border: 1px solid #bbb;
    outline: none;

    color: #555;
}






.text {
    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
    color: #777;
    font-size: 15px;
}







.button {
    position: relative;
    width: auto;
    padding: 7px 15px !important;

    border-radius: 30px;
    font-size: 13px;

    overflow: hidden;
    cursor: pointer;
}
    .button.bBoxy {
        border-radius: 4px; 
    }

    .button.bDefault {
        /*background: #7592BF !important;*/
        background: rgb(140, 153, 247);
        color: #fff !important;
    }

    .button.bWarn {
        background: #ff632c !important;
        color: #fff !important;
    }

    .button img {
        position: relative;
        top: 3px;
        margin-left: -5px;
        margin-right: 3px;

        width: 16px;
        height: auto;
    }









.clickable {cursor: pointer;}








.inputField {
    position: relative;
    left: 0;
    padding: 7px 3px;
    height: 32px;
    border-radius: 3px;
    background: transparent;

    border: 1px solid #bbb;
    outline: none;

    color: #555;
}






.text {
    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
    color: #777;
    font-size: 15px;
}


.text.header {
    font-family: Verdana, Geneva, sans-serif;
    color: #888;
    font-size: 14px;
    font-weight: bolder !important;
}

.icon {
    opacity: .4;
}







div.HR {
    position: relative;
    width: 100%;
    height: 1px;

    margin-top: 15px;
    margin-bottom: 10px;

    background: #eaeaea;
}






div.optionGroup {
    position: relative;
    float: right;
    right: 0;
    height: 25px;
    width: auto;
    overflow: hidden;
    border-radius: 5px;
    background: rgba(0, 0, 0, 0.05);
}
    .optionGroup div.optionItem {
        position: relative;
        height: 25px;
        
        width: auto;
        padding-left: 10px;
        padding-right: 10px;


        line-height: 25px;
        text-align: center;
        font-size: 13px;

        transition: all 0.2s;
    }

    .optionGroup div.optionItem.selected {
        background: rgba(0, 0, 0, 0.1);
        border-radius: 3px;
    }



.optionGroupLabel {
    float: left;
}





















.optionMenuHolder {
    position: absolute;
    top: 150px;
    right: 30px;
    z-index: 100;

    width: 160px;
    height: auto;

    padding: 5px 10px;

    background: #fff;
    box-shadow: 4px 4px 8px 8px rgba(0, 0, 0, 0.05);
    border-radius: 3px;

    overflow-x: hidden;
    overflow-y: auto;
    transition: all 0.3s, top 0s, left 0s, max-height 0s;
}

    .optionMenuHolder.hide {
        opacity: 0;
        transform: scale(0.9);
        pointer-events: none;
    }


        .optionMenuHolder .optionItem {
            position: relative;
            width: calc(100% - 5px * 2);
            height: 20px;
            margin: 2.5px 0;
            padding: 7px 0;
        }

        .optionMenuHolder .optionItem.disabled {
            opacity: 0.3;
            pointer-events: none;
        }

            .optionItem .optionIcon {
                position: relative;
                float: left;
                top: 10%;

                height: 80%;
                width: auto;
                opacity: 0.3;
            }


            .optionItem .optionText {
                position: absolute;
                left: 25px;
                float: left;
                
                width: auto;
                line-height: 19px;
                white-space: nowrap;

                font-size: 13px;
                color: #999;
            }

